# src/Modules/Catalog/Kartova.Catalog.Contracts/RegisterApplicationRequest.cs
@@ -3,4 +3,4 @@ using System.Diagnostics.CodeAnalysis;
 namespace Kartova.Catalog.Contracts;
 
 [ExcludeFromCodeCoverage]
-public sealed record RegisterApplicationRequest(string Name, string Description);
+public sealed record RegisterApplicationRequest(string Name, string DisplayName, string Description);
